fixed some spacing issues

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -31,8 +31,8 @@ body {
   padding: 2rem;
 }
 
-#burger {
-  background-color: #f9a346;
+textarea {
+  width: 100%;
 }
 
 #entryText {
